Emit info log for location of implicit dependency